[package]
name = "obsidian_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
log = "0.4.11"
raw-window-handle = "0.3.3"

# crates/obsidian_render/Cargo.toml
[features]
default = ["vulkan"]
vulkan = [] 
